# philosophers

./: LICENSE  README.md
philo/: CMakeLists.txt  Makefile  philo
philo/includes/: philo.h
philo/src/: main.c
philo/src/begin/: begin.c
philo/src/cleaner/: cleaner.c
philo/src/exit/: er_exit.c
philo/src/init/: init.c
philo/src/live_circle/: start_life.c
philo/src/parser/: parser.c
philo/src/utils/: cur_time.c  ft_atoi.c  ft_strncmp.c  print_mes.c
philo_bonus/: CMakeLists.txt  Makefile
philo_bonus/includes/: philo.h
philo_bonus/src/: main.c
philo_bonus/src/begin/: begin.c
philo_bonus/src/cleaner/: cleaner.c
philo_bonus/src/exit/: er_exit.c
philo_bonus/src/init/: init.c
philo_bonus/src/live_circle/: start_life.c
philo_bonus/src/parser/: parser.c
philo_bonus/src/utils/: cur_time.c  ft_atoi.c  ft_strncmp.c  print_mes.c
